feat: add whatwg-url library for URL parsing and serialization
- Introduced `whatwg-url` library with public API and URL state machine implementation.
- Added utility functions for URL manipulation and encoding.
- Updated package.json for `whatwg-url` with dependencies and scripts.
- Enhanced main package.json for order-forecast with start and build scripts.
- Added Vercel configuration for deployment.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
+  "name": "order-forecast",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "node api/getSheetData.js",
+    "build": "echo 'Build completed'"
+  },
   "dependencies": {
     "dotenv": "^16.5.0",
     "node-fetch": "^2.7.0"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
