--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,20 @@
-# Ignore environment variable files
-.env
-# Node modules
-node_modules/
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-# OS generated files
-.DS_Store
-Thumbs.db
-# VSCode settings
+# Vercel Build Output
+.vercel_build_output/
+
+# Local development files
 .vscode/
-.vercel
+*.local
+
+# Large media files that might cause upload issues
+*.mp4
+*.mov
+*.psd
+*.ai
+*.zip
+*.tar.gz
+
+# Build artifacts
+dist/
+build/
+out/
+.next/
