--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ GOOGLE_SHEET_ID=1Cx8eCZH9HafVPcP0t78nP-3nRtYmL_hJXRBcf6DhxHE
 # Optional: Define defaults if needed
 SHEET_NAME=Sheet1
 SHEET_RANGE=A2:M
+NODE_ENV=production
