--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,52 @@
-# Vercel Build Output
-.vercel_build_output/
+# Dependency directories
+node_modules/
+jspm_packages/
 
-# Local development files
-.vscode/
-*.local
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Large media files that might cause upload issues
-*.mp4
-*.mov
-*.psd
-*.ai
-*.zip
-*.tar.gz
+# Log files
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Build artifacts
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directories
+coverage/
+.nyc_output
+
+# Build outputs
 dist/
 build/
 out/
-.next/
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS specific files
+.DS_Store
+Thumbs.db
+
+# Temp files
+.tmp/
+temp/
+
+# Debug logs
+debug.log
+
+# Vercel
+.vercel
