--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "order-forecast",
   "version": "1.0.0",
   "scripts": {
-    "start": "node api/getSheetData.js",
+    "start": "node server.js",
+    "dev": "node server.js",
     "build": "echo 'Build completed'"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "node-fetch": "^2.7.0"
   },
   "engines": {
