Implement OrderForecast system with enhanced visualization features, CRM integration, and improved UI

--- a/.env
+++ b/.env
@@ -3,5 +3,4 @@ GOOGLE_API_KEY=AIzaSyDI0KE6L1l1GPWgwKYuNyIbqs4HXHX8qJQ
 GOOGLE_SHEET_ID=1Cx8eCZH9HafVPcP0t78nP-3nRtYmL_hJXRBcf6DhxHE
 # Optional: Define defaults if needed
 SHEET_NAME=Sheet1
-SHEET_RANGE=A2:M
-NODE_ENV=production
+SHEET_RANGE=A2:N
