--- a/package.json
+++ b/package.json
@@ -3,14 +3,23 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node server.js",
-    "dev": "node server.js",
-    "build": "echo 'Build completed'"
+    "dev": "vercel dev",
+    "build": "npm run build:css && echo 'Build completed'",
+    "build:css": "tailwindcss -i ./style.css -o ./dist/style.css --minify",
+    "watch:css": "tailwindcss -i ./style.css -o ./dist/style.css --watch"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "node-fetch": "^2.7.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   },
   "engines": {
     "node": ">=14.0.0"
