refactor: migrate login.js to ES module imports and modern async login flow

--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 # .env - DO NOT COMMIT TO GIT
+JWT_SECRET=your_jwt_secret_key_here
+REFRESH_SECRET=your_refresh_secret_key_here
+AUTH_TOKEN_KEY=your_jwt_secret_key_here
 GOOGLE_API_KEY=AIzaSyDI0KE6L1l1GPWgwKYuNyIbqs4HXHX8qJQ
 GOOGLE_SHEET_ID=1Cx8eCZH9HafVPcP0t78nP-3nRtYmL_hJXRBcf6DhxHE
 # Optional: Define defaults if needed
