--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,29 @@
 # Google Sheets API credentials
+# IMPORTANT: Never commit the actual .env file to version control
 GOOGLE_API_KEY=your_google_api_key_here
 GOOGLE_SHEET_ID=your_sheet_id_here
 SHEET_NAME=Sheet1
 SHEET_RANGE=A2:M
 
+# Authentication secrets (use strong random values in production)
+JWT_SECRET=generate_a_strong_random_secret_for_production
+REFRESH_SECRET=generate_a_different_strong_random_secret_for_production
+TOKEN_EXPIRY=2h
+REFRESH_TOKEN_EXPIRY=604800
+
+# API security settings
+ALLOWED_ORIGIN=https://your-production-domain.com
+API_RATE_LIMIT=100
+API_RATE_LIMIT_WINDOW_MS=60000
+
 # Deployment settings
 NODE_ENV=production
+PORT=3000
+
+# Logging configuration
+LOG_LEVEL=info
+REMOTE_LOGGING_ENDPOINT=https://your-logging-service.com/api/logs
+
+# Feature flags
+ENABLE_USER_MANAGEMENT=true
+ENABLE_ADVANCED_FEATURES=true
